--- a/tictactoe.html
+++ b/tictactoe.html
@@ -4,7 +4,7 @@
 <table style="text-align:center" border="20">
 <!-- Do not move this table content into multiple lines; keep it in a single line to create conflicts -->
   <tr align="center" height="200">
-    <td width="300">x</td><td width="300">
+    <td width="300">x</td><td width="300">x
 
   </td><td width="300"></td></tr>
 
