6th chance by vj

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -6,12 +6,13 @@
   <tr align="center" height="200">
     <td width="300">x</td><td width="300">x
 
-  </td><td width="300"></td></tr>
+  </td><td width="300">o</td></tr>
 
   <tr align="center" height="200">
     <td></td><td>o</td><td></td></tr>
     <tr align="center" height="200">
-      <td></td><td>o</td><td>x</td></tr>
+      <td></td><td>o</td><td>x</td>
+    </tr>
 <!-- Do not move this table content into multiple lines; keep it in a single line to create conflicts -->
 </table>
 </font>
